Too many changes to count

--- a/app/src/main/res/layout/fragment_base_player.xml
+++ b/app/src/main/res/layout/fragment_base_player.xml
@@ -48,12 +48,12 @@
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
         app:layout_constraintHorizontal_chainStyle="spread_inside"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toLeftOf="@+id/play"
+        app:layout_constraintRight_toLeftOf="@+id/playButton"
         app:layout_constraintTop_toBottomOf="@+id/title"
         tools:text="118 tracks" />
 
     <Button
-        android:id="@+id/play"
+        android:id="@+id/playButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/play"
@@ -83,7 +83,7 @@
         android:id="@+id/dataRV"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/play"
+        app:layout_constraintTop_toBottomOf="@+id/playButton"
         app:layout_constraintBottom_toBottomOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
