--- a/app/src/main/res/layout/fragment_base_player.xml
+++ b/app/src/main/res/layout/fragment_base_player.xml
@@ -61,8 +61,8 @@
         android:paddingLeft="@dimen/padding_xx_large"
         android:paddingRight="@dimen/padding_xx_large"
         android:minHeight="0dp"
-        android:paddingTop="@dimen/padding_medium"
-        android:paddingBottom="@dimen/padding_medium"
+        android:paddingTop="@dimen/padding_small"
+        android:paddingBottom="@dimen/padding_small"
         android:layout_marginRight="@dimen/margin_medium"
         android:layout_marginLeft="@dimen/margin_medium"
         style="@style/Widget.AppCompat.Button.Colored"
