--- a/app/src/main/res/layout/item_song.xml
+++ b/app/src/main/res/layout/item_song.xml
@@ -47,6 +47,7 @@
             app:layout_constraintRight_toLeftOf="@+id/moreOptions"
             app:layout_constraintLeft_toRightOf="@+id/albumArt"
             app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.9"
             app:layout_constraintBottom_toTopOf="@+id/guideLine"
             tools:text="Midnight Dogs" />
 
@@ -60,6 +61,7 @@
             android:textAppearance="@style/TextAppearance.AppCompat.Caption"
             app:layout_constraintLeft_toLeftOf="@+id/songArtist"
             app:layout_constraintRight_toRightOf="@+id/songArtist"
+            app:layout_constraintVertical_bias="0.1"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/guideLine"
             tools:text="Loved it out there" />
