--- a/app/src/main/res/navigation/navigation_graph.xml
+++ b/app/src/main/res/navigation/navigation_graph.xml
@@ -15,7 +15,7 @@
         tools:layout="@layout/fragment_explore">
         <action
             android:id="@+id/action_exploreFragment_to_navigationDialogFragment"
-            app:destination="@id/navigationDialogFragment"/>
+            app:destination="@id/navigationDialogFragment" />
         <action
             android:id="@+id/action_exploreFragment_to_albumSongsFragment"
             app:destination="@id/albumSongsFragment" />
@@ -24,19 +24,20 @@
         android:id="@+id/songsFragment"
         android:name="com.jadebyte.jadeplayer.main.songs.SongsFragment"
         android:label="SongsFragment"
-        tools:layout="@layout/fragment_base_player" >
+        tools:layout="@layout/fragment_base_player">
         <action
             android:id="@+id/action_songsFragment_to_navigationDialogFragment"
-            app:destination="@id/navigationDialogFragment" >
-            <argument android:defaultValue="0"
-                android:name="origin" />
+            app:destination="@id/navigationDialogFragment">
+            <argument
+                android:name="origin"
+                android:defaultValue="0" />
         </action>
     </fragment>
     <fragment
         android:id="@+id/albumsFragment"
         android:name="com.jadebyte.jadeplayer.main.albums.AlbumsFragment"
         android:label="AlbumsFragment"
-        tools:layout="@layout/fragment_base_player" >
+        tools:layout="@layout/fragment_base_player">
         <action
             android:id="@+id/action_albumsFragment_to_navigationDialogFragment"
             app:destination="@id/navigationDialogFragment" />
@@ -54,26 +55,54 @@
         android:name="com.jadebyte.jadeplayer.main.search.SearchFragment"
         android:label="SearchFragment"
         tools:layout="@layout/fragment_search" />
-    <dialog-fragment
+
+    <!--Replace with dialog when available-->
+    <fragment
         android:id="@+id/navigationDialogFragment"
         android:name="com.jadebyte.jadeplayer.main.navigation.NavigationDialogFragment"
         android:label="fragment_navigation_dialog"
         tools:layout="@layout/fragment_navigation_dialog">
         <argument
             android:name="origin"
-            app:argType="integer"
-            android:defaultValue="-1" />
-    </dialog-fragment>
+            android:defaultValue="-1"
+            app:argType="integer" />
+        <action
+            android:id="@+id/action_navigationDialogFragment_to_songsFragment"
+            app:destination="@id/songsFragment"
+            app:popUpTo="@+id/navigationDialogFragment" />
+        <action
+            android:id="@+id/action_navigationDialogFragment_to_playlistFragment"
+            app:destination="@id/playlistFragment"
+            app:popUpTo="@+id/navigationDialogFragment"
+            app:popUpToInclusive="true" />
+        <action
+            android:id="@+id/action_navigationDialogFragment_to_artistsFragment"
+            app:destination="@id/artistsFragment"
+            app:popUpTo="@+id/navigationDialogFragment"
+            app:popUpToInclusive="true" />
+    </fragment>
     <fragment
         android:id="@+id/albumSongsFragment"
         android:name="com.jadebyte.jadeplayer.main.albums.AlbumSongsFragment"
-        tools:layout="@layout/fragment_album_songs"
-        android:label="albumSongsFragment" >
+        android:label="albumSongsFragment"
+        tools:layout="@layout/fragment_album_songs">
         <argument
             android:name="album"
             app:argType="com.jadebyte.jadeplayer.main.albums.Album" />
         <argument
             android:name="transitionName"
             app:argType="string" />
+    </fragment>
+    <fragment
+        android:id="@+id/artistsFragment"
+        android:name="com.jadebyte.jadeplayer.main.artists.ArtistsFragment"
+        android:label="fragment_artists"
+        tools:layout="@layout/fragment_artists" >
+        <action
+            android:id="@+id/action_artistsFragment_to_navigationDialogFragment"
+            app:destination="@id/navigationDialogFragment" >
+            <argument android:defaultValue="2"
+                android:name="origin" />
+        </action>
     </fragment>
 </navigation>
