--- a/app/src/main/res/layout/item_album.xml
+++ b/app/src/main/res/layout/item_album.xml
@@ -26,6 +26,7 @@
             android:contentDescription="@string/track_album_art"
             android:scaleType="centerCrop"
             android:src="@{album}"
+            android:transitionName="@{album.toString()}"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
