--- a/app/src/main/res/layout/item_song.xml
+++ b/app/src/main/res/layout/item_song.xml
@@ -25,7 +25,7 @@
             android:layout_height="60dp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            android:id="@+id/albumArt"
+            android:id="@+id/sharableView"
             android:src="@{song}"
             android:scaleType="centerCrop"
             android:contentDescription="@string/track_album_art"
@@ -45,7 +45,7 @@
             android:textSize="@dimen/text_size_x_small"
             android:textStyle="bold"
             app:layout_constraintRight_toLeftOf="@+id/moreOptions"
-            app:layout_constraintLeft_toRightOf="@+id/albumArt"
+            app:layout_constraintLeft_toRightOf="@+id/sharableView"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.9"
             app:layout_constraintBottom_toTopOf="@+id/guideLine"
