--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -59,4 +59,16 @@
         <item name="android:padding">@dimen/padding_large</item>
     </style>
 
+    <style name="AppTheme.SectionBackButton">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:background">?attr/selectableItemBackgroundBorderless</item>
+        <item name="android:padding">@dimen/padding_medium</item>
+        <item name="android:layout_margin">@dimen/margin_medium</item>
+        <item name="android:drawableStart">@drawable/ic_back</item>
+        <item name="android:text">@string/back</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="android:textSize">@dimen/text_size_x_small</item>
+    </style>
+
 </resources>
