--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -10,7 +10,7 @@
     tools:context=".main.search.SearchFragment">
 
     <ImageButton
-        android:id="@+id/backButton"
+        android:id="@+id/sectionBackButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/margin_medium"
@@ -37,11 +37,11 @@
         android:imeOptions="actionSearch"
         android:inputType="text"
         android:maxLines="1"
-        app:layout_constraintBottom_toBottomOf="@+id/backButton"
+        app:layout_constraintBottom_toBottomOf="@+id/sectionBackButton"
         app:layout_constraintEnd_toStartOf="@+id/filterButton"
         app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/backButton"
-        app:layout_constraintTop_toTopOf="@+id/backButton" />
+        app:layout_constraintStart_toEndOf="@+id/sectionBackButton"
+        app:layout_constraintTop_toTopOf="@+id/sectionBackButton" />
 
 
     <ImageButton
@@ -52,11 +52,11 @@
         android:background="?attr/selectableItemBackgroundBorderless"
         android:contentDescription="@string/filter_results"
         android:padding="@dimen/padding_medium"
-        app:layout_constraintBottom_toBottomOf="@+id/backButton"
+        app:layout_constraintBottom_toBottomOf="@+id/sectionBackButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/searchText"
-        app:layout_constraintTop_toTopOf="@+id/backButton"
+        app:layout_constraintTop_toTopOf="@+id/sectionBackButton"
         app:srcCompat="@drawable/ic_filter_list" />
 
     <com.google.android.material.tabs.TabLayout
@@ -66,7 +66,7 @@
         android:minHeight="?actionBarSize"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/backButton"
+        app:layout_constraintTop_toBottomOf="@+id/sectionBackButton"
         app:tabBackground="@color/colorPrimary"
         app:tabGravity="center"
         app:tabIndicatorHeight="4dp"
