--- a/app/src/main/res/layout/item_artist.xml
+++ b/app/src/main/res/layout/item_artist.xml
@@ -34,7 +34,7 @@
 
 
         <TextView
-            android:id="@+id/artistName"
+            android:id="@+id/sharableView"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/margin_large"
@@ -44,6 +44,7 @@
             android:text="@{artist.name}"
             android:textAppearance="@style/TextAppearance.AppCompat.Body1"
             android:textSize="@dimen/text_size_small"
+            android:transitionName="@{artist.toString()}"
             app:layout_constraintBottom_toTopOf="@+id/guideLine"
             app:layout_constraintLeft_toRightOf="@+id/artistAvatar"
             app:layout_constraintRight_toRightOf="parent"
@@ -60,8 +61,8 @@
             android:text="@{@plurals/numberOfSongs(artist.songsCount, artist.songsCount)}"
             android:textAppearance="@style/TextAppearance.AppCompat.Caption"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="@+id/artistName"
-            app:layout_constraintRight_toRightOf="@+id/artistName"
+            app:layout_constraintLeft_toLeftOf="@+id/sharableView"
+            app:layout_constraintRight_toRightOf="@+id/sharableView"
             app:layout_constraintTop_toBottomOf="@+id/guideLine"
             app:layout_constraintVertical_bias="0.1"
             tools:text="23" />
