--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -15,4 +15,5 @@
     <color name="colorNavItemBg">#303030</color>
     <color name="colorNavItemBgSelected">@color/colorAccent</color>
     <color name="colorBurOverlay">#ED070E21</color>
+    <color name="seek_bar_background">#454956</color>
 </resources>
