--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,6 +6,7 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+    <dimen name="progress_circle_thickness">5dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="margin_x_small">2dp</dimen>
     <dimen name="margin_small">5dp</dimen>
@@ -27,4 +28,5 @@
     <dimen name="text_size_x_large">20sp</dimen>
     <dimen name="text_size_xx_large">22sp</dimen>
     <dimen name="text_size_xxx_large">30sp</dimen>
+    <dimen name="floating_playback_height">70dp</dimen>
 </resources>
