--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -16,4 +16,5 @@
     <color name="colorNavItemBgSelected">@color/colorAccent</color>
     <color name="colorBurOverlay">#ED070E21</color>
     <color name="seek_bar_background">#454956</color>
+    <color name="bottomPlaybackBgColor">#161C2C</color>
 </resources>
