--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,4 +15,5 @@
     <color name="colorNavItemBgSelected">#5EFF4060</color>
     <color name="colorBurOverlay">#C8F5F5F5</color>
     <color name="seek_bar_background">#454956</color>
+    <color name="bottomPlaybackBgColor">#EEEEEE</color>
 </resources>
