--- a/app/src/main/res/layout/item_playback_image.xml
+++ b/app/src/main/res/layout/item_playback_image.xml
@@ -2,16 +2,28 @@
   Copyright (c) 2019 . Wilberforce Uwadiegwu. All Rights Reserved.
   -->
 
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <ImageView
-        android:id="@+id/albumArt"
+    <data>
+        <variable
+            name="song"
+            type="com.jadebyte.jadeplayer.main.songs.Song" />
+
+    </data>
+
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:contentDescription="@string/album_art"
-        android:padding="@dimen/padding_large"
-        tools:src="@drawable/thumb_circular_default_hollow" />
-</FrameLayout>
+        android:layout_height="match_parent">
+
+        <ImageView
+            android:id="@+id/albumArt"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:contentDescription="@string/album_art"
+            android:padding="@dimen/padding_large"
+            app:songSrc="@{song}"
+            tools:src="@drawable/thumb_circular_default_hollow" />
+    </FrameLayout>
+</layout>
