--- a/app/src/main/res/navigation/navigation_graph.xml
+++ b/app/src/main/res/navigation/navigation_graph.xml
@@ -6,127 +6,27 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/navigation_graph"
-    app:startDestination="@id/exploreFragment">
+    app:startDestination="@id/mainFragment">
 
     <fragment
-        android:id="@+id/exploreFragment"
-        android:name="com.jadebyte.jadeplayer.main.explore.ExploreFragment"
-        android:label="fragment_explore"
-        tools:layout="@layout/fragment_explore">
+        android:id="@+id/mainFragment"
+        android:name="com.jadebyte.jadeplayer.main.MainFragment"
+        android:label="fragment_main"
+        tools:layout="@layout/fragment_main" >
         <action
-            android:id="@+id/action_exploreFragment_to_navigationDialogFragment"
-            app:destination="@id/navigationDialogFragment" />
-        <action
-            android:id="@+id/action_exploreFragment_to_albumSongsFragment"
-            app:destination="@id/albumSongsFragment" />
+            android:id="@+id/action_mainFragment_to_playbackFragment"
+            app:destination="@id/playbackFragment" />
     </fragment>
     <fragment
-        android:id="@+id/songsFragment"
-        android:name="com.jadebyte.jadeplayer.main.songs.SongsFragment"
-        android:label="SongsFragment"
-        tools:layout="@layout/fragment_base_player">
-        <action
-            android:id="@+id/action_songsFragment_to_navigationDialogFragment"
-            app:destination="@id/navigationDialogFragment">
-            <argument
-                android:name="origin"
-                android:defaultValue="0" />
-        </action>
-    </fragment>
-    <fragment
-        android:id="@+id/albumsFragment"
-        android:name="com.jadebyte.jadeplayer.main.albums.AlbumsFragment"
-        android:label="AlbumsFragment"
-        tools:layout="@layout/fragment_base_player">
-        <action
-            android:id="@+id/action_albumsFragment_to_navigationDialogFragment"
-            app:destination="@id/navigationDialogFragment" />
-        <action
-            android:id="@+id/action_albumsFragment_to_albumSongsFragment"
-            app:destination="@id/albumSongsFragment" />
-    </fragment>
-    <fragment
-        android:id="@+id/playlistFragment"
-        android:name="com.jadebyte.jadeplayer.main.playlist.PlaylistFragment"
-        android:label="PlaylistFragment"
-        tools:layout="@layout/fragment_playlist" />
-    <fragment
-        android:id="@+id/searchFragment"
-        android:name="com.jadebyte.jadeplayer.main.search.SearchFragment"
-        android:label="SearchFragment"
-        tools:layout="@layout/fragment_search" />
-
-    <!--Replace with dialog when available-->
-    <fragment
-        android:id="@+id/navigationDialogFragment"
-        android:name="com.jadebyte.jadeplayer.main.navigation.NavigationDialogFragment"
-        android:label="fragment_navigation_dialog"
-        tools:layout="@layout/fragment_navigation_dialog">
+        android:id="@+id/playbackFragment"
+        android:name="com.jadebyte.jadeplayer.main.playback.PlaybackFragment"
+        android:label="fragment_playback"
+        tools:layout="@layout/fragment_playback" >
         <argument
-            android:name="origin"
-            android:defaultValue="-1"
-            app:argType="integer" />
-        <action
-            android:id="@+id/action_navigationDialogFragment_to_songsFragment"
-            app:destination="@id/songsFragment"
-            app:popUpTo="@+id/navigationDialogFragment" />
-        <action
-            android:id="@+id/action_navigationDialogFragment_to_playlistFragment"
-            app:destination="@id/playlistFragment"
-            app:popUpTo="@+id/navigationDialogFragment"
-            app:popUpToInclusive="true" />
-        <action
-            android:id="@+id/action_navigationDialogFragment_to_artistsFragment"
-            app:destination="@id/artistsFragment"
-            app:launchSingleTop="false"
-            app:popUpTo="@+id/navigationDialogFragment"
-            app:popUpToInclusive="true" />
-    </fragment>
-    <fragment
-        android:id="@+id/albumSongsFragment"
-        android:name="com.jadebyte.jadeplayer.main.albums.AlbumSongsFragment"
-        android:label="albumSongsFragment"
-        tools:layout="@layout/fragment_album_songs">
-        <argument
-            android:name="album"
-            app:argType="com.jadebyte.jadeplayer.main.albums.Album" />
+            android:name="song"
+            app:argType="com.jadebyte.jadeplayer.main.songs.Song" />
         <argument
             android:name="transitionName"
             app:argType="string" />
-    </fragment>
-    <fragment
-        android:id="@+id/artistsFragment"
-        android:name="com.jadebyte.jadeplayer.main.artists.ArtistsFragment"
-        android:label="fragment_artists"
-        tools:layout="@layout/fragment_artists" >
-        <action
-            android:id="@+id/action_artistsFragment_to_navigationDialogFragment"
-            app:destination="@id/navigationDialogFragment" >
-            <argument android:defaultValue="2"
-                android:name="origin" />
-        </action>
-        <action
-            android:id="@+id/action_artistsFragment_to_artistAlbumsFragment"
-            app:destination="@id/artistAlbumsFragment"
-            app:launchSingleTop="false" />
-    </fragment>
-    <fragment
-        android:id="@+id/artistAlbumsFragment"
-        android:name="com.jadebyte.jadeplayer.main.artists.ArtistAlbumsFragment"
-        tools:layout="@layout/fragment_artist_albums"
-        android:label="ArtistAlbumsFragment" >
-        <action
-            android:id="@+id/action_artistAlbumsFragment_to_navigationDialogFragment"
-            app:destination="@id/navigationDialogFragment"
-            app:launchSingleTop="false" />
-        <argument
-            android:name="artist"
-            app:argType="com.jadebyte.jadeplayer.main.artists.Artist" />
-        <argument
-            android:name="transitionName"
-            app:argType="string" />
-        <action
-            android:id="@+id/action_artistAlbumsFragment_to_albumSongsFragment"
-            app:destination="@id/albumSongsFragment" />
     </fragment>
 </navigation>
