--- a/app/src/main/res/drawable/ic_previous.xml
+++ b/app/src/main/res/drawable/ic_previous.xml
@@ -1,3 +1,7 @@
+<!--
+  Copyright (c) 2019 . Wilberforce Uwadiegwu. All Rights Reserved.
+  -->
+
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="24dp"
     android:height="14.5dp"
