--- a/app/src/main/res/layout/fragment_playback.xml
+++ b/app/src/main/res/layout/fragment_playback.xml
@@ -204,12 +204,13 @@
 
     <ImageButton
         android:id="@+id/previousButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="65dp"
+        android:layout_height="45dp"
         android:layout_marginStart="@dimen/margin_large"
         android:background="?attr/selectableItemBackgroundBorderless"
         android:contentDescription="@string/previous_button"
         android:padding="@dimen/padding_medium"
+        android:scaleType="fitCenter"
         android:src="@drawable/ic_previous"
         app:layout_constraintBottom_toBottomOf="@+id/playButton"
         app:layout_constraintEnd_toStartOf="@+id/playButton"
@@ -232,12 +233,13 @@
 
     <ImageButton
         android:id="@+id/nextButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="65dp"
+        android:layout_height="45dp"
         android:layout_marginEnd="@dimen/margin_large"
         android:background="?attr/selectableItemBackgroundBorderless"
         android:contentDescription="@string/next_button"
         android:padding="@dimen/padding_medium"
+        android:scaleType="fitCenter"
         android:src="@drawable/ic_next"
         app:layout_constraintBottom_toBottomOf="@+id/playButton"
         app:layout_constraintEnd_toEndOf="parent"
