Added track bottom sheet menu

--- a/app/src/main/res/drawable/ic_heart.xml
+++ b/app/src/main/res/drawable/ic_heart.xml
@@ -2,7 +2,16 @@
   Copyright (c) 2019 . Wilberforce Uwadiegwu. All Rights Reserved.
   -->
 
-<vector android:height="14dp" android:viewportHeight="14.281"
-    android:viewportWidth="16" android:width="16dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="#ffffff" android:pathData="M8,14.281a0.467,0.467 0,0 1,-0.308 -0.117l-0.021,-0.018c-0.707,-0.625 -1.391,-1.214 -1.941,-1.687A36.58,36.58 0,0 1,1.636 8.595,6.034 6.034,0 0,1 0,4.657 4.93,4.93 0,0 1,1.167 1.4,4.006 4.006,0 0,1 7.6,1.871a6.152,6.152 0,0 1,0.4 0.652,6.106 6.106,0 0,1 0.4,-0.652A4.006,4.006 0,0 1,14.833 1.4,4.93 4.93,0 0,1 16,4.657a6.034,6.034 0,0 1,-1.636 3.938,36.564 36.564,0 0,1 -4.09,3.861l0,0c-0.549,0.472 -1.233,1.061 -1.941,1.687l-0.02,0.018A0.468,0.468 0,0 1,8 14.281ZM4.25,0.947A3.116,3.116 0,0 0,1.871 2.029,3.982 3.982,0 0,0 0.937,4.657c0,2.431 2.148,4.28 5.4,7.08 0.576,0.5 1.1,0.947 1.663,1.442 0.568,-0.5 1.089,-0.948 1.663,-1.441 3.252,-2.8 5.4,-4.65 5.4,-7.081a3.979,3.979 0,0 0,-0.933 -2.628A3.114,3.114 0,0 0,11.75 0.947,3.155 3.155,0 0,0 9.163,2.418 5.664,5.664 0,0 0,8.446 3.86a0.467,0.467 0,0 1,-0.892 0,5.605 5.605,0 0,0 -0.717,-1.441A3.155,3.155 0,0 0,4.25 0.947Z"/>
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:width="18.408dp"
+    android:height="16.693dp"
+    android:viewportWidth="18.408"
+    android:viewportHeight="16.693">
+    <group
+        android:translateX="-610.544"
+        android:translateY="-330.208">
+        <path
+            android:fillColor="#CBC9C9"
+            android:pathData="M619.746 346.9l-0.26 -0.142c-9.716 -5.3 -9.167 -10.828 -8.767 -12.4a5.317 5.317 0 0 1 5.023 -4.154 5.006 5.006 0 0 1 4 2.129 5.01 5.01 0 0 1 4.005 -2.129h0a5.317 5.317 0 0 1 5.025 4.154c0.4 1.568 0.95 7.1 -8.771 12.4Zm-4 -15.605a4.232 4.232 0 0 0 -3.97 3.335c-0.347 1.363 -0.786 6.155 7.974 11.03 8.763 -4.876 8.325 -9.667 7.978 -11.03a3.969 3.969 0 0 0 -7.513 -1.049l-0.465 0.767 -0.464 -0.768A4.192 4.192 0 0 0 615.743 331.3Z" />
+    </group>
 </vector>
