--- a/app/src/main/res/anim/up_from_bottom.xml
+++ b/app/src/main/res/anim/up_from_bottom.xml
@@ -5,7 +5,7 @@
 
 
 <set xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shareInterpolator="@android:anim/decelerate_interpolator">
+    android:interpolator="@android:anim/decelerate_interpolator">
     <translate
         android:fromXDelta="0%" android:toXDelta="0%"
         android:fromYDelta="50%" android:toYDelta="0%"
