--- a/app/src/main/res/navigation/navigation_graph.xml
+++ b/app/src/main/res/navigation/navigation_graph.xml
@@ -28,5 +28,17 @@
         <argument
             android:name="transitionName"
             app:argType="string" />
+        <action
+            android:id="@+id/action_playbackFragment_to_songsMenuBottomSheetDialogFragment"
+            app:destination="@id/songsMenuBottomSheetDialogFragment" />
     </fragment>
+    <dialog
+        android:id="@+id/songsMenuBottomSheetDialogFragment"
+        android:name="com.jadebyte.jadeplayer.main.songs.SongsMenuBottomSheetDialogFragment"
+        android:label="fragment_songs_menu_bottom_sheet_dialog"
+        tools:layout="@layout/fragment_songs_menu_bottom_sheet_dialog" >
+        <argument
+            android:name="song"
+            app:argType="com.jadebyte.jadeplayer.main.songs.Song" />
+    </dialog>
 </navigation>
