Added track bottom sheet menu to PlaybackFragment

--- a/app/src/main/res/drawable/ic_heart.xml
+++ b/app/src/main/res/drawable/ic_heart.xml
@@ -11,7 +11,7 @@
         android:translateX="-610.544"
         android:translateY="-330.208">
         <path
-            android:fillColor="#CBC9C9"
+            android:fillColor="?android:textColorPrimary"
             android:pathData="M619.746 346.9l-0.26 -0.142c-9.716 -5.3 -9.167 -10.828 -8.767 -12.4a5.317 5.317 0 0 1 5.023 -4.154 5.006 5.006 0 0 1 4 2.129 5.01 5.01 0 0 1 4.005 -2.129h0a5.317 5.317 0 0 1 5.025 4.154c0.4 1.568 0.95 7.1 -8.771 12.4Zm-4 -15.605a4.232 4.232 0 0 0 -3.97 3.335c-0.347 1.363 -0.786 6.155 7.974 11.03 8.763 -4.876 8.325 -9.667 7.978 -11.03a3.969 3.969 0 0 0 -7.513 -1.049l-0.465 0.767 -0.464 -0.768A4.192 4.192 0 0 0 615.743 331.3Z" />
     </group>
 </vector>
